# modbus

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.devcontainer/: devcontainer.json
include/client/: client_config.hpp  tcp_client.hpp
include/core/: modbus_response.hpp  requests.hpp  responses.hpp  tcp_data_unit.hpp  types.hpp
include/core/messages/: exception_response.hpp  is_message.hpp  mask_write_register_request.hpp  mask_write_register_response.hpp  read_coils_request.hpp  read_coils_response.hpp  read_discrete_inputs_request.hpp  read_discrete_inputs_response.hpp  read_holding_registers_request.hpp  read_holding_registers_response.hpp  read_input_registers_request.hpp  read_input_registers_response.hpp  read_write_registers_request.hpp  read_write_registers_response.hpp  write_multiple_coils_request.hpp  write_multiple_coils_response.hpp  write_multiple_registers_request.hpp  write_multiple_registers_response.hpp  write_single_coil_request.hpp  write_single_coil_response.hpp  write_single_register_request.hpp  write_single_register_response.hpp
include/server/: server_config.hpp  server_helper.hpp  server_types.hpp  tcp_server.hpp  tcp_session.hpp  tcp_session_manager.hpp
modbus/: client.hpp  server.hpp
modbus/client/: client_config.hpp  tcp_client.cpp  tcp_client.hpp
modbus/core/: error.cpp  error.hpp  modbus_response.cpp  modbus_response.hpp  requests.hpp  responses.hpp  tcp_data_unit.cpp  tcp_data_unit.hpp  types.hpp
modbus/core/messages/: exception_response.cpp  exception_response.hpp  is_message.hpp  mask_write_register_request.cpp  mask_write_register_request.hpp  mask_write_register_response.cpp  mask_write_register_response.hpp  read_coils_request.cpp  read_coils_request.hpp  read_coils_response.cpp  read_coils_response.hpp  read_discrete_inputs_request.cpp  read_discrete_inputs_request.hpp  read_discrete_inputs_response.cpp  read_discrete_inputs_response.hpp  read_holding_registers_request.cpp  read_holding_registers_request.hpp  read_holding_registers_response.cpp  read_holding_registers_response.hpp  read_input_registers_request.cpp  read_input_registers_request.hpp  read_input_registers_response.cpp  read_input_registers_response.hpp  read_write_registers_request.cpp  read_write_registers_request.hpp  read_write_registers_response.cpp  read_write_registers_response.hpp  write_multiple_coils_request.cpp  write_multiple_coils_request.hpp  write_multiple_coils_response.cpp  write_multiple_coils_response.hpp  write_multiple_registers_request.cpp  write_multiple_registers_request.hpp  write_multiple_registers_response.cpp  write_multiple_registers_response.hpp  write_single_coil_request.cpp  write_single_coil_request.hpp  write_single_coil_response.cpp  write_single_coil_response.hpp  write_single_register_request.cpp  (+3 more)
modbus/server/: server_config.hpp  server_helper.hpp  server_types.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp  tcp_session_manager.cpp  tcp_session_manager.hpp
src/client/: tcp_client.cpp
src/core/: error.cpp  modbus_response.cpp  no_types.hpp  tcp_data_unit.cpp
src/core/messages/: exception_response.cpp  mask_write_register_request.cpp  mask_write_register_response.cpp  read_coils_request.cpp  read_coils_response.cpp  read_discrete_inputs_request.cpp  read_discrete_inputs_response.cpp  read_holding_registers_request.cpp  read_holding_registers_response.cpp  read_input_registers_request.cpp  read_input_registers_response.cpp  read_write_registers_request.cpp  read_write_registers_response.cpp  write_multiple_coils_request.cpp  write_multiple_coils_response.cpp  write_multiple_registers_request.cpp  write_multiple_registers_response.cpp  write_single_coil_request.cpp  write_single_coil_response.cpp  write_single_register_request.cpp  write_single_register_response.cpp
src/server/: tcp_server.cpp  tcp_session.cpp  tcp_session_manager.cpp
test/: CMakeLists.txt  bit_operations_test.cpp  e2e_tcp_client_test.cpp  legal_address_test.cpp  register_operations_test.cpp  request_test.cpp  response_data_test.cpp  response_test.cpp  tcp_data_unit_test.cpp  tcp_server_test.cpp
